# lumi-codex

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
docs/: architecture.md  benchmark.md  building.md  codex-source-map.md  implementation.md
docs/learning/: README.md
docs/superpowers/specs/: 2026-05-09-lumi-codex-design.md  2026-05-10-codex-research-plan-review.md
